--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-tools": "^12.0.0",
     "gsap": "^3.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
